--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
           <artifactId>spring-boot-starter-test</artifactId>
           <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
