--- a/front/intelligent-community/package.json
+++ b/front/intelligent-community/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.0",
+    "ts-loader": "^9.5.1",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
